# apex_pipeline

./: .clang-format  .clang-format-ignore  .clangd  .dockerignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  build_quick.bat  index.html  lsan_suppressions.txt  tsan_suppressions.txt  vcpkg.json
apex_core/: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  build_quick.bat  tsan_suppressions.txt  vcpkg.json
apex_core/benchmarks/: CMakeLists.txt  README.md  bench_affinity_helper.hpp  bench_helpers.hpp  bench_main.cpp  system_profile.hpp
apex_core/benchmarks/integration/: bench_architecture_comparison.cpp  bench_cross_core_latency.cpp  bench_cross_core_message_passing.cpp  bench_frame_pipeline.cpp  bench_session_throughput.cpp
apex_core/benchmarks/micro/: bench_allocators.cpp  bench_dispatcher.cpp  bench_frame_codec.cpp  bench_intrusive_vs_shared.cpp  bench_mpsc_queue.cpp  bench_ring_buffer.cpp  bench_serialization.cpp  bench_session_lifecycle.cpp  bench_slab_allocator.cpp  bench_slab_pool.cpp  bench_spsc_queue.cpp  bench_timing_wheel.cpp
apex_core/config/: default.toml
apex_core/core/examples/: chat_server.cpp  echo_server.cpp
apex_core/core/schemas/: echo.fbs  heartbeat.fbs
apex_core/core/src/: core_engine.cpp  server.cpp
apex_core/docs/: design-decisions.md  design-rationale.md
apex_core/docs/plans/: 20260306_154038_v0.1.0_phase-1-2-setup-and-foundations.md  20260306_192942_v0.1.0_phase-4-protocol-session.md  20260306_233049_v0.2.1_review-fix-coroutine.md  20260307_015333_v0.2.1_review-2nd-fix.md  20260307_102842_v0.2.2_phase-4.6-iter1-design.md  20260307_102842_v0.2.2_phase-4.6-iter1-impl.md  20260307_194508_v0.2.3_review-fix-impl.md  20260308_002052_v0.2.4_server-coreengine-integration-design.md  20260308_002355_v0.2.4_implementation-plan.md
apex_core/docs/progress/: 20260306_155231_v0.1.0_phase-1-complete.md  20260306_165642_v0.1.0_phase-3-complete.md  20260306_225305_v0.2.0_phase-4.5-complete.md  20260307_001017_v0.2.1_review-fix-complete.md  20260307_015333_v0.2.1_review-2nd-fix-complete.md  20260307_182342_v0.2.2_phase-4.6-iter1-complete.md  20260308_032102_v0.2.4_implementation.md
apex_core/docs/review/: 20260306_231328_v0.1.0_review.md  20260306_231328_v0.2.0_review.md  20260307_001017_v0.2.1_review.md  20260307_015333_v0.2.1_review-2nd.md  20260307_095930_v0.2.1_design-alignment.md  20260307_194238_v0.2.2_review.md  20260308_033219_v0.2.4_code-review-1st.md
apex_core/examples/: CMakeLists.txt  chat_server.cpp  echo_loadtest.cpp  echo_server.cpp  multicore_echo_server.cpp
apex_core/schemas/: chat_message.fbs  echo.fbs  error_response.fbs  heartbeat.fbs
apex_core/src/: admin_http_server.cpp  arena_allocator.cpp  bump_allocator.cpp  config.cpp  connection_handler.cpp  connection_limiter.cpp  core_engine.cpp  cpu_topology.cpp  crash_handler.cpp  cross_core_dispatcher.cpp  error_sender.cpp  frame_codec.cpp  http_server_base.cpp  logging.cpp  message_dispatcher.cpp  metrics_http_server.cpp  metrics_registry.cpp  periodic_task_scheduler.cpp  ring_buffer.cpp  scoped_logger.cpp  server.cpp  session.cpp  session_manager.cpp  slab_allocator.cpp  slab_pool.cpp  spsc_mesh.cpp  tcp_acceptor.cpp  thread_affinity.cpp  timing_wheel.cpp  wire_header.cpp
apex_core/tests/: CMakeLists.txt  test_helpers.hpp  test_mocks.hpp
apex_core/tests/integration/: CMakeLists.txt  test_echo_integration.cpp  test_pipeline_integration.cpp  test_server_e2e.cpp  test_shutdown_timeout.cpp
apex_core/tests/unit/: CMakeLists.txt  test_admin_http_server.cpp  test_arena_allocator.cpp  test_blocking_task_executor.cpp  test_bump_allocator.cpp  test_config.cpp  test_connection_handler.cpp  test_connection_limiter.cpp  test_core_engine.cpp  test_core_metrics.cpp  test_cpu_topology.cpp  test_crash_handler.cpp  test_cross_core_call.cpp  test_cross_core_dispatcher.cpp  test_drain_tick.cpp  test_error_propagation.cpp  test_error_sender_service_code.cpp  test_flatbuffers_dispatch.cpp  test_frame_codec.cpp  test_listener_lifecycle.cpp  test_logging.cpp  test_math_utils.cpp  test_message_dispatcher.cpp  test_metrics_http_server.cpp  test_metrics_registry.cpp  test_mpsc_queue.cpp  test_periodic_task_scheduler.cpp  test_ring_buffer.cpp  test_scoped_logger.cpp  test_server_adapter.cpp  test_server_error_paths.cpp  test_server_global.cpp  test_server_multicore.cpp  test_server_shutdown_drain.cpp  test_service_base.cpp  test_service_lifecycle.cpp  test_service_registry.cpp  test_session.cpp  test_session_manager.cpp  test_session_write_queue.cpp  (+13 more)
apex_services/: CMakeLists.txt  README.md
apex_services/auth-svc/: CMakeLists.txt  auth_svc.toml
apex_services/auth-svc/migrations/: 001_create_schema_and_role.sh  001_create_schema_and_role.sql  002_create_users_table.sql  003_create_refresh_tokens_table.sql  999_seed_dev_data.sql
apex_services/auth-svc/schemas/: login_request.fbs  login_response.fbs  logout_request.fbs  logout_response.fbs
apex_services/auth-svc/src/: auth_service.cpp  jwt_manager.cpp  main.cpp  password_hasher.cpp  session_store.cpp
apex_services/auth-svc/tests/: CMakeLists.txt
apex_services/chat-svc/: CMakeLists.txt  chat_svc.toml
apex_services/chat-svc/schemas/: chat_message.fbs  chat_room.fbs
apex_services/gateway/: CMakeLists.txt  gateway.toml
apex_services/gateway/src/: main.cpp  (+14 more)
apex_shared/: CMakeLists.txt  README.md  vcpkg.json
apex_shared/schemas/: auth_request.fbs  auth_response.fbs  error_envelope.fbs  gateway_envelope.fbs  msg_registry.toml  refresh_token_request.fbs  refresh_token_response.fbs
apex_shared/tests/: CMakeLists.txt  test_helpers.hpp  test_mocks.hpp
core/: CMakeLists.txt
core/examples/: CMakeLists.txt  chat_server.cpp  echo_server.cpp
core/schemas/: chat_message.fbs
core/src/: core_engine.cpp  error_sender.cpp  frame_codec.cpp  message_dispatcher.cpp  ring_buffer.cpp  server.cpp  session.cpp  session_manager.cpp  slab_pool.cpp  tcp_acceptor.cpp  timing_wheel.cpp  wire_header.cpp
core/tests/: CMakeLists.txt
(+1252 files in other folders)
